--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@ body {
     color: #F3F2F0; 
 }
 
+.dark .circle circle{
+    fill: #D40000;
+}
+
+.dark .triangle path{
+    fill: #FFFFFF;
+    ;
+}
+
 .light{
     background-color: #F3F2F0;
     color: #010101 ;
@@ -18,6 +27,15 @@ body {
 
 .light .nav-link {
     color: #010101; 
+}
+
+.light .circle circle{
+    fill: #FFFFFF;
+}
+
+.light .triangle path{
+    fill: #D40000;
+    ;
 }
 
 .wrapper {
@@ -81,6 +99,24 @@ header{
     color: #D40000;
 }
 
+.nav-info .nav-item{
+    position: relative;
+}
+
+.nav-info .nav-item::before{
+    content: '';
+    display: block;
+    width: 1px;
+    height: 24px;
+    background-color: rgba(243, 242, 240, 0.5);
+    position: absolute;
+    left: 0;
+    top: calc(50% - 12px);
+}
+.nav-info .nav-item:first-child::before{
+    display: none;
+}
+
 .social{
     display:flex;
     justify-content: space-between;
@@ -115,4 +151,13 @@ header{
 }
 .skill.description{
     line-height: 150%;
+}
+
+.circle-main {
+    width: 253px;
+    height: 253px;
+}
+.circle-nav {
+    width: 106px; 
+    height: 106px;
 }
