--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,18 @@ body {
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.main {
+    position: relative;
+}
+.main .title-h1 {
+    position: relative;
+    z-index: 4;
+}
 .name {
     font-size: 28px;
-    
+    position: relative;
+    z-index: 3;
 }
 
 .title-h1 {
@@ -64,7 +73,7 @@ body {
     width: 100%;
 }
 
-header{
+.header{
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
@@ -122,6 +131,10 @@ header{
     justify-content: space-between;
     margin-top: 100px;
     padding-bottom: 60px;
+    
+}
+.social-item:last-child{
+    position: relative;
 }
 
 .project {
@@ -152,12 +165,46 @@ header{
 .skill.description{
     line-height: 150%;
 }
-
+.section-steps {
+    padding-top: 180px;
+    padding-bottom: 198px;    
+}
+.steps-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 150%;
+}
+.steps-title {
+    font-size: 28px;
+}
+.steps-title span {
+    margin-right: 45px;
+}
+.steps-description{
+    font-size: 16px;
+}
 .circle-main {
     width: 253px;
     height: 253px;
+    position: absolute;
+    left: -128px;
+    top: calc(50% - 126px);
+    z-index: 1;
+
 }
+.triangle {
+    position: absolute;
+    left: -151px;
+    top: 0;
+    z-index: 2;
+}
+
 .circle-nav {
     width: 106px; 
     height: 106px;
+    position: absolute;
+    right: 39px;
+    top: calc(50% - 53px);
 }
+
