--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,16 @@ body {
     fill: #FFFFFF;
     ;
 }
+.dark .social,
+.dark .steps-item,
+.dark .about-title, 
+.dark .about-description {
+    border-bottom: 1px solid #F3F2F0;
+}
+
+.dark .steps-item:first-child {
+    border-top: 1px solid #F3F2F0;
+}
 
 .light{
     background-color: #F3F2F0;
@@ -37,7 +47,15 @@ body {
     fill: #D40000;
     ;
 }
-
+.light .social,
+.light .steps-item,
+.light .about-title, 
+.light .about-description {
+    border-bottom: 1px solid #010101;
+}
+.light .steps-item:first-child {
+    border-top: 1px solid #010101;
+}
 .wrapper {
     max-width: 1140px;
     margin: 0 auto;
@@ -72,14 +90,14 @@ body {
     margin-bottom: 120px; 
     width: 100%;
 }
-
-.header{
+/* точка не ставится перед header */
+header{ 
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
     padding-bottom: 60px;
 }
-
+ 
 .nav{
     list-style-type: none;
     padding-left: 0;
@@ -90,7 +108,6 @@ body {
 .nav-item{
     padding-left: 16px;
     padding-right: 16px;
-    
 }
 
 .nav-item:first-child{
@@ -131,7 +148,6 @@ body {
     justify-content: space-between;
     margin-top: 100px;
     padding-bottom: 60px;
-    
 }
 .social-item:last-child{
     position: relative;
@@ -154,15 +170,15 @@ body {
 .skill{
     display: flex;
     justify-content: space-between;
-
+    padding-top: 60px;
 }
 .skill-item{
-    flex: 0 0 24%;
+    flex: 0 0 21%;
 }
-.skill.title-h3{
+.skill .title-h3{
     text-transform: uppercase;
 }
-.skill.description{
+.skill .description{
     line-height: 150%;
 }
 .section-steps {
@@ -174,6 +190,8 @@ body {
     justify-content: space-between;
     align-items: center;
     line-height: 150%;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 .steps-title {
     font-size: 28px;
@@ -183,6 +201,8 @@ body {
 }
 .steps-description{
     font-size: 16px;
+    flex:  0 0 49%;
+    max-width: 49%;
 }
 .circle-main {
     width: 253px;
@@ -199,7 +219,6 @@ body {
     top: 0;
     z-index: 2;
 }
-
 .circle-nav {
     width: 106px; 
     height: 106px;
@@ -208,3 +227,51 @@ body {
     top: calc(50% - 53px);
 }
 
+.about {
+    display: grid;
+    grid-template: 349px / repeat(4, 1fr);
+}
+.about-title {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    padding-top: 62px;
+    padding-bottom: 62px;
+}
+.about-description {
+    grid-column: 3/5;
+    grid-row: 1/2;
+    font-size: 28px;
+    line-height: 150%;
+    opacity: 0.8;
+    padding: 62px 10px 62px 10px;
+    padding-top: 62px;
+    padding-bottom: 62px;
+}
+.about-01 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    padding: 65px 20px 35px 10px;
+}
+.about-02 {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    padding: 65px 10px 35px 10px;
+}
+.about-03 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+    padding: 35px 20px 35px 10px;
+}
+.about-04 {
+    grid-column: 4/5;
+    grid-row: 3/4;
+    padding: 35px 10px 35px 10px;;
+}
+.about-item .description{
+    line-height: 150%;
+    opacity: 0.8;
+}
