--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body {
 
 .dark .triangle path{
     fill: #FFFFFF;
-    ;
 }
 .dark .social,
 .dark .steps-item,
@@ -69,6 +68,8 @@ body {
 .main .title-h1 {
     position: relative;
     z-index: 4;
+    letter-spacing: 0.03em;
+    margin-top: 38px;
 }
 .name {
     font-size: 28px;
@@ -84,18 +85,19 @@ body {
 .title-h3 {
     font-size: 16px;
     font-weight: 700;
+    letter-spacing: 0.03em;
 }
 
 .photo {
-    margin-bottom: 120px; 
+    margin-bottom: 93px; 
     width: 100%;
 }
 /* точка не ставится перед header */
 header{ 
     display: flex;
     justify-content: space-between;
-    padding-top: 40px;
-    padding-bottom: 60px;
+    padding-top: 44px;
+    padding-bottom: 65px;
 }
  
 .nav{
@@ -106,8 +108,8 @@ header{
 }
 
 .nav-item{
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 14px;
+    padding-right: 14px;
 }
 
 .nav-item:first-child{
@@ -119,6 +121,7 @@ header{
 .nav-link{
     text-decoration-line: none;
     font-size: 14px;
+    transition: 0.2s color ease;
 }
 
 .nav-link:hover {
@@ -143,11 +146,40 @@ header{
     display: none;
 }
 
+
+.nav-social .nav-item{
+    position: relative;
+}
+.nav-social .nav-item::before{
+    content: '';
+    display: block;
+    width: 1px;
+    height: 24px;
+    background-color: rgba(243, 242, 240, 0.5);
+    position: absolute;
+    left: 0;
+    top: calc(50% - 12px);
+}
+.nav-social .nav-item:first-child::before{
+    display: none;
+}
+.nav-social .nav-item{
+    padding-left: 28px;
+    padding-right: 28px;
+}
+.nav-social .nav-item:last-child {
+    padding-right: 0;
+}
+.nav-social .nav-link {
+    font-size: 16px;
+}
+
+
 .social{
     display:flex;
     justify-content: space-between;
-    margin-top: 100px;
-    padding-bottom: 60px;
+    margin-top: 105px;
+    padding-bottom: 49px;
 }
 .social-item:last-child{
     position: relative;
@@ -159,6 +191,12 @@ header{
     align-items: center;
     font-size: 16px;
     font-weight: 700;
+    padding-bottom: 11px;
+    transition: 0.2s ;
+    border-bottom: 2px solid transparent;
+}
+.project:hover{
+    border-bottom: 2px solid #F3F2F0;
 }
 .project-img {
     width: 16px;
@@ -167,13 +205,14 @@ header{
     background-image: url(../img/arrow.svg);
     margin-left: 15px;
 }
+
 .skill{
     display: flex;
-    justify-content: space-between;
-    padding-top: 60px;
+    padding-top: 47px;
 }
 .skill-item{
-    flex: 0 0 21%;
+    flex: 0 0 22%;
+    margin-right: 3%;
 }
 .skill .title-h3{
     text-transform: uppercase;
@@ -181,6 +220,7 @@ header{
 .skill .description{
     line-height: 150%;
 }
+
 .section-steps {
     padding-top: 180px;
     padding-bottom: 198px;    
@@ -209,14 +249,13 @@ header{
     height: 253px;
     position: absolute;
     left: -128px;
-    top: calc(50% - 126px);
+    top: calc(50% - 138px);
     z-index: 1;
-
 }
 .triangle {
     position: absolute;
     left: -151px;
-    top: 0;
+    top: -21px;
     z-index: 2;
 }
 .circle-nav {
@@ -224,7 +263,7 @@ header{
     height: 106px;
     position: absolute;
     right: 39px;
-    top: calc(50% - 53px);
+    top: calc(50% - 60px);
 }
 
 .about {
