--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ body {
 .title-h3 {
     font-size: 16px;
     font-weight: 700;
-    letter-spacing: 0.03em;
 }
 
 .photo {
@@ -210,19 +209,23 @@ header{
     display: flex;
     padding-top: 47px;
 }
+.skill .title-h3 {
+    letter-spacing: 0.03em;
+}
 .skill-item{
-    flex: 0 0 22%;
+    flex: 0 0 22.5%;
     margin-right: 3%;
 }
 .skill .title-h3{
     text-transform: uppercase;
+    margin-bottom: 20px;
 }
 .skill .description{
     line-height: 150%;
 }
 
 .section-steps {
-    padding-top: 180px;
+    padding-top: 145px;
     padding-bottom: 198px;    
 }
 .steps-item {
@@ -230,14 +233,14 @@ header{
     justify-content: space-between;
     align-items: center;
     line-height: 150%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 .steps-title {
     font-size: 28px;
 }
 .steps-title span {
-    margin-right: 45px;
+    margin-right: 40px;
 }
 .steps-description{
     font-size: 16px;
@@ -265,10 +268,12 @@ header{
     right: 39px;
     top: calc(50% - 60px);
 }
-
+.section-about{
+    padding-top: 107px;
+}
 .about {
     display: grid;
-    grid-template: 349px / repeat(4, 1fr);
+    grid-template: 290px / repeat(4, 1fr);
 }
 .about-title {
     grid-column: 1/3;
@@ -277,7 +282,7 @@ header{
     font-weight: 700;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    padding-top: 62px;
+    padding-top: 68px;
     padding-bottom: 62px;
 }
 .about-description {
@@ -293,24 +298,31 @@ header{
 .about-01 {
     grid-column: 3/4;
     grid-row: 2/3;
-    padding: 65px 20px 35px 10px;
+    padding: 47px 20px 35px 10px;
 }
 .about-02 {
     grid-column: 4/5;
     grid-row: 2/3;
-    padding: 65px 10px 35px 10px;
+    padding: 47px 10px 35px 15px;
 }
 .about-03 {
     grid-column: 3/4;
     grid-row: 3/4;
-    padding: 35px 20px 35px 10px;
+    padding: 13px 20px 35px 10px;
 }
 .about-04 {
     grid-column: 4/5;
     grid-row: 3/4;
-    padding: 35px 10px 35px 10px;;
+    padding: 13px 10px 14px 15px;;
 }
 .about-item .description{
     line-height: 150%;
     opacity: 0.8;
+}
+.about-item > p{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.about-item .title-h3 {
+    margin-bottom: 22px;
 }
