--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
 .dark .triangle path{
     fill: #FFFFFF;
 }
+.dark .triangle-form path{
+    fill: #FFFFFF;
+}
 .dark .social,
 .dark .steps-item,
 .dark .about-title, 
@@ -44,7 +47,6 @@ body {
 
 .light .triangle path{
     fill: #D40000;
-    ;
 }
 .light .social,
 .light .steps-item,
@@ -261,6 +263,7 @@ header{
     top: -21px;
     z-index: 2;
 }
+
 .circle-nav {
     width: 106px; 
     height: 106px;
@@ -281,6 +284,19 @@ header{
     position: absolute;
     left: -46px;
     top: calc(50% - 45px);
+}
+.circle-form{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: -152px;
+    z-index: 1;
+}
+.triangle-form{
+    position: absolute;
+    left: -178px;
+    top: 52px;
+    z-index: 2;
 }
 .section-about{
     padding-top: 105px;
@@ -629,7 +645,7 @@ header{
 }
 .section-form{
     padding-top: 93px;
-    padding-bottom: 100px;
+    padding-bottom: 127px;
 }
 .form{
     display: grid;
@@ -642,6 +658,11 @@ header{
     line-height: 150%;
     text-transform: uppercase;
     border-bottom: 1px solid #F3F2F0;
+    position: relative;
+}
+.tell-about{
+    position: relative;
+    z-index: 3;
 }
 .form-description {
     font-size: 28px;
@@ -659,12 +680,20 @@ header{
     flex-direction: column;
     justify-content: flex-end;
 }
+.form-social .nav-social{
+    margin-bottom: 4px;
+}
+.nav-social .nav-item:first-child{
+    padding-left: 0;
+}
 form {
     font-size: 12px;
+    line-height: 150%;
+    padding-left: 10px;
 }
 form label{
     opacity: 0.8;
-    margin-bottom: 14px;
+    margin-bottom: 10px;
     display: block;
 }
 form input {
@@ -674,15 +703,19 @@ form input {
     border: none;
     box-sizing: border-box;
     margin-bottom: 21px;
+    color: #F3F2F0;
 }
-form input[type=submit]{
+form input[type=submit] {
     background-color: #D40000;
     font-size: 16px;
-    font-weight: 700; 
+    font-weight: 700;
     line-height: 150%;
     color: #F3F2F0;
     padding: 21px 0px;
     margin-bottom: 0;
+}
+form input:focus{
+    outline: none;
 }
 form select{
     width: 100%;
@@ -690,22 +723,56 @@ form select{
 .ui-selectmenu-button.ui-button {
     width: 100%;
     background-color: #38383A;
-    color: #FFFFFF;
+    color: #FFF;
     padding: 25px 20px 25px;
     box-sizing: border-box;
     margin-bottom: 39px;
     border-radius: 0;
+    border: none;
 }
 .ui-button:hover, .ui-button:focus{
-    border:none;
+    border: none;
     outline: none;
 }
-.ui-selectmenu-menu.ui-menu{
+.ui-selectmenu-menu .ui-menu{
     background-color: #38383A;
     color: rgba(243, 242, 240, 0.4);
     font-size: 12px;
+    border: none;
 }
-.ui-selectmenu-menu.ui-menu-item:hover{
+.ui-selectmenu-menu .ui-menu .ui-menu-item{
+    padding: 10px 20px;
+}
+.ui-selectmenu-menu .ui-menu .ui-menu-item:hover{
     color: rgba(243, 242, 240, 1);
-    padding: 10px 10px;
+    padding: 10px 20px;
+}
+footer{
+    border-top: 1px solid #F3F2F0;
+}
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 65px;
+}
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 42px;
+    padding-bottom: 43px;
+}
+.footer-bottom p{
+    margin: 0;
+    font-size: 12px;
+    color: rgba(243, 242, 240, 0.3);
+}
+.footer-link{
+    color: rgba(243, 242, 240, 0.3);
+    border-bottom: 1px solid rgba(243, 242, 240, 0.3);
+    transition: 0.2s ease;
+    text-decoration: none;
+}
+.footer-link:hover{
+    color: rgba(243, 242, 240, 1);
+    border-bottom: 1px solid rgba(243, 242, 240, 1);
 }
